language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_does_not_shadow_names_in_anonymous_function.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let fun = fn() {\n    let int = 1\n    wibble(11)\n  }\n  fun()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let fun = fn() {
    let int = 1
    wibble(11)
           ↑  
  }
  fun()
}


----- AFTER ACTION

pub fn main() {
  let fun = fn() {
    let int = 1
    let int_2 = 11
    wibble(int_2)
  }
  fun()
}
