language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_from_arg_in_pipelined_call_of_function_to_capture.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  fn(total, item) { total + item }\n  |> fold(with: _, from: 0, over: [1, 2, 3])\n}\npub fn fold(over l: List(a), from i: t, with f: fn(t, a) -> t) -> acc { todo }\n"
---
----- BEFORE ACTION

pub fn main() {
  fn(total, item) { total + item }
  |> fold(with: _, from: 0, over: [1, 2, 3])
     ↑                                      
}
pub fn fold(over l: List(a), from i: t, with f: fn(t, a) -> t) -> acc { todo }


----- AFTER ACTION

pub fn main() {
  let value = fold(with: _, from: 0, over: [1, 2, 3])
  fn(total, item) { total + item }
  |> value
}
pub fn fold(over l: List(a), from i: t, with f: fn(t, a) -> t) -> acc { todo }
