language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_from_capture_arguments_2.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  int.add(11, _)\n}"
---
----- BEFORE ACTION
pub fn main() {
  int.add(11, _)
          ↑     
}


----- AFTER ACTION
pub fn main() {
  let int = 11
  int.add(int, _)
}
