language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_ignores_names_in_other_blocks.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  {\n    let int = 1\n    int + 2\n  }\n  wibble(11)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  {
    let int = 1
    int + 2
  }
  wibble(11)
         ↑  
}


----- AFTER ACTION

pub fn main() {
  {
    let int = 1
    int + 2
  }
  let int = 11
  wibble(int)
}
