language-server/src/tests/snapshots/gleam_language_server__tests__action__extract_variable_ignores_names_in_other_branches_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main(x: Result(_, _)) {\n  case x {\n    Ok(_) -> {\n      let int = 1\n      int + 2\n    }\n    Error(_) -> {\n        wibble(11)\n    }\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main(x: Result(_, _)) {
  case x {
    Ok(_) -> {
      let int = 1
      int + 2
    }
    Error(_) -> {
        wibble(11)
               ↑  
    }
  }
}


----- AFTER ACTION

pub fn main(x: Result(_, _)) {
  case x {
    Ok(_) -> {
      let int = 1
      int + 2
    }
    Error(_) -> {
        let int = 11
        wibble(int)
    }
  }
}
